tests/wpt/tests/third_party/test262/test/language/statements/class/elements/syntax/early-errors/grammar-static-meth-prototype.js
// This file was procedurally generated from the following sources:
// - src/class-elements/grammar-static-meth-prototype.case
// - src/class-elements/syntax/invalid/cls-decl-elements-invalid-syntax.template
/*---
description: Static Methods cannot be named prototype (class declaration)
esid: prod-ClassElement
features: [class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Class Definitions / Static Semantics: Early Errors

    ClassElement : static MethodDefinition
        It is a Syntax Error if PropName of MethodDefinition is "prototype"

---*/


$DONOTEVALUATE();

class C {
  static prototype() {}
}
